Added some basic HTML - 2

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
 
         <head>
             <title>Hiking Trails and Info Details</title>
+            <script src="index.js"></script>
+            <link type="stylesheet" href="style.css">
         </head>
 
 
