--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
 
         <head>
-            <title>Hiking Trails and Info Details</title>
+            <title>Rick and Morty Character Hub</title>
             <script src="index.js"></script>
             <link type="stylesheet" href="style.css">
         </head>
@@ -13,7 +13,11 @@
 
 
 
+            <div>
+                <div>
 
+                </div>
+            </div>
 
         </body>
         
