updated css + html

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class='container'>
             <ul id='character-list'>
-                <div class='frame'>
-                    <div class='image'>
+                <div class='card'>
+                    <div class='frame'>
                         <img id='char-pic'>
                     </div>
                 </div>
