Character Cards added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Rick And Morty Encyclopedia Project</title>
         <script src="index.js" defer></script>
         <link rel="stylesheet" href="style.css">
@@ -12,18 +13,11 @@
         </header>
         <div>
             <form class = 'search-bar' style='text-align:center'>
-                <input type='text' id='name-input' name='name=of-char' placeholder='Enter charatcer name:'>
+                <input type='text' id='name-input' name='name=of-char' placeholder='Enter character name:'>
                 <input type='button' id='search-button' value='Search'>
             </form>
         </div>
         <div class='container'>
-            <ul id='character-list'>
-                <div class='card'>
-                    <div class='frame'>
-                        <img id='char-pic'>
-                    </div>
-                </div>
-            </ul>
         </div>
     </body>
 </html>
