--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <input type='button' id='search-button' value='Search'>
             </form>
         </div>
-        <div class='container'>
-        </div>
+        <div class='card-container'></div>
+        <div class='info-container'></div>
     </body>
 </html>
