--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <input type='button' id='search-button' value='Search'>
             </form>
         </div>
+    <aside>
+        <ul id="mainCharList">
+        </ul>
+    </aside>
         <div class='card-container'></div>
         <div class='info-container'></div>
     </body>
