Updated for search bar

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
             <h2>The Rick and Morty Encyclopedia</h2>
         </header>
         <div>
-            <form class = 'search-bar' style='text-align:center'>
-                <input type='text' id='name-input' name='name=of-char' placeholder='Enter character name:'>
-                <input type='button' id='search-button' value='Search'>
+            <form class = 'search-bar' id = 'char-form' style='text-align:center'>
+                <input type='text' id='name-input' name='nameOfChar' placeholder='Enter character name:'>
+                <input type='submit' id='search-button' value='Search'>
             </form>
         </div>
+        <!-- <aside>
+            <ul id="mainCharList">
+            </ul>
+        </aside> -->
         <div class='card-container'></div>
         <div class='info-container'></div>
     </body>
