Added location character display

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
             </main>
         </div>
         <div class='info-container'></div>
+        <div id='locationDetailPage'>
+            
+        </div>
     </body>
 </html>
