Added comments to the code for better explanation of each function

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
         <meta charset="utf-8">
         <title>Rick And Morty Encyclopedia Project</title>
         <script src="index.js" defer></script>
